@@ -1,9 +1,9 @@
 package emu.grasscutter.game.world;
 
-import static emu.grasscutter.server.event.player.PlayerTeleportEvent.TeleportType.SCRIPT;
-
 import emu.grasscutter.data.GameData;
 import emu.grasscutter.data.excels.dungeon.DungeonData;
+import emu.grasscutter.game.entity.EntityTeam;
+import emu.grasscutter.game.entity.EntityWorld;
 import emu.grasscutter.game.player.Player;
 import emu.grasscutter.game.player.Player.SceneLoadState;
 import emu.grasscutter.game.props.EnterReason;
@@ -23,22 +23,24 @@ import emu.grasscutter.utils.ConversionUtils;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMaps;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.val;
 import org.jetbrains.annotations.NotNull;
 
-public final class World implements Iterable<Player> {
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.List;
+
+import static emu.grasscutter.server.event.player.PlayerTeleportEvent.TeleportType.SCRIPT;
+
+public class World implements Iterable<Player> {
     @Getter private final GameServer server;
     @Getter private final Player host;
     @Getter private final List<Player> players;
     @Getter private final Int2ObjectMap<Scene> scenes;
 
-    @Getter private int levelEntityId;
+    @Getter private EntityWorld entity;
     private int nextEntityId = 0;
     private int nextPeerId = 0;
     private int worldLevel;
@@ -60,7 +62,8 @@ public final class World implements Iterable<Player> {
         this.players = Collections.synchronizedList(new ArrayList<>());
         this.scenes = Int2ObjectMaps.synchronize(new Int2ObjectOpenHashMap<>());
 
-        this.levelEntityId = this.getNextEntityId(EntityIdType.MPLEVEL);
+        // this.levelEntityId = this.getNextEntityId(EntityIdType.MPLEVEL);
+        this.entity = new EntityWorld(this);
         this.worldLevel = player.getWorldLevel();
         this.isMultiplayer = isMultiplayer;
 
@@ -68,6 +71,10 @@ public final class World implements Iterable<Player> {
         this.currentWorldTime = host.getPlayerGameTime();
 
         this.host.getServer().registerWorld(this);
+    }
+
+    public int getLevelEntityId() {
+        return entity.getId();
     }
 
     /**
@@ -116,7 +123,7 @@ public final class World implements Iterable<Player> {
     }
 
     public int getPlayerCount() {
-        return this.getPlayers().size();
+        return this.players.size();
     }
 
     /**
@@ -146,7 +153,8 @@ public final class World implements Iterable<Player> {
 
         // Set player variables
         player.setPeerId(this.getNextPeerId());
-        player.getTeamManager().setEntityId(this.getNextEntityId(EntityIdType.TEAM));
+        player.getTeamManager().setEntity(new EntityTeam(player));
+        //player.getTeamManager().setEntityId(this.getNextEntityId(EntityIdType.TEAM));
 
         // Copy main team to multiplayer team
         if (this.isMultiplayer()) {
@@ -174,9 +182,12 @@ public final class World implements Iterable<Player> {
         player.sendPacket(
                 new PacketDelTeamEntityNotify(
                         player.getSceneId(),
-                        this.getPlayers().stream()
-                                .map(p -> p.getTeamManager().getEntityId())
-                                .collect(Collectors.toList())));
+                    this.getPlayers().stream()
+                        .map(p ->
+                            p.getTeamManager().getEntity() == null ? 0 :
+                            p.getTeamManager().getEntity().getId()).toList()
+                )
+        );
 
         // Deregister
         this.getPlayers().remove(player);
